tests/ui/feature-gates/feature-gate-fn_delegation.stderr
error[E0658]: functions delegation is not yet fully implemented
  --> $DIR/feature-gate-fn_delegation.rs:5:1
   |
LL | reuse to_reuse::foo;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #118212 <https://github.com/rust-lang/rust/issues/118212> for more information
   = help: add `#![feature(fn_delegation)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
